# gloss

./: .gitignore  CLAUDE.md  Cargo.toml  Trunk.toml  cli_out.html  cli_out2.html  log.txt  malformed_test.html  multilang_test.html  readme.md  repo_metrics.ts  sample_check.html  table_check.html  test_sample.md  test_sample2.md  warnings.txt  warnings2.txt  warnings3.txt
.github/workflows/: pages.yml  release-cli.yml
doc/: spec.md
docs/handoff/: 2026-03-26-codex-handoff.md  2026-03-26-plan6-handoff.md
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-cli/tests/: plugin_config.rs  plugin_convert.rs  plugin_renderer.rs
src-core/: Cargo.toml
src-core/src/: html.rs  lib.rs  parser.rs
src-core/tests/: integration.rs  snapshot.rs
src-desktop-core/: Cargo.toml
src-desktop-core/src/: app_core.rs  lib.rs  renderer.rs
src-desktop-layout/: Cargo.toml
src-desktop-layout/src/: lib.rs  model.rs  update.rs  view.rs
src-desktop-native/: Cargo.toml
src-desktop-native/src/: config.rs  fs.rs  lib.rs  plugin_host.rs
src-desktop-types/: Cargo.toml
src-desktop-types/src/: config.rs  draw.rs  editor_view.rs  events.rs  lib.rs  memory_vfs.rs  noop.rs  path.rs  primitives.rs  traits.rs
src-editor/: Cargo.toml
src-editor/src/: cursor.rs  editor_state.rs  gap_buffer.rs  highlighter.rs  ime.rs  lib.rs  undo.rs
src-plugin/: Cargo.toml
src-plugin-types/: Cargo.toml
src-plugin-types/src/: lib.rs
src-plugin/src/: config.rs  convert.rs  host.rs  lib.rs  renderer.rs
src-web/: Cargo.toml
src-web/src/: lib.rs
tests/testcases/: 01_ruby.html  02_gloss.html  (+16 more)
web-playground/: index.html  package-lock.json  package.json  sample.html  sample.n.md  tsconfig.json
(+64 files in other folders)
