[package]
name = "src-desktop-types"
version = "0.1.0"
edition = "2021"

[dependencies]
src-core         = { path = "../src-core" }
src-plugin-types = { path = "../src-plugin-types" }
serde            = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json       = { version = "1", default-features = false, features = ["alloc"] }

[features]
default     = []
test-utils  = []
