[package]
name = "src-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
src-core = { path = "../src-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlTextAreaElement", "HtmlElement", "Element", "EventTarget", "Event"] }
js-sys = "0.3.69"
